# tg

./: .gitignore  CMakeLists.txt  DesktopSelection.cpp  DesktopShot.cpp  DesktopShot.h  DesktopShot_Wayland.cpp  DiaSelectLang.cpp  DiaSelectLang.h  README.md  WindowOCR.cpp  WindowOCR.h  WindowOCR_hello.cpp  main.cpp  make_apt_pack.sh  make_deb_package.sh  make_deb_package_tesseract5.sh  make_tg.sh  tg_1.0.0_amd64.deb
deb_pkg/DEBIAN/: control
guiTools/: DesktopShot.cpp  GuiTools.cpp  Tools.h  XGrid.cpp  XImageViewer.cpp  XImageViewer.h  XMainWindow.cpp  XMatrix.cpp  XMouseDelta.cpp  XPainter.cpp  XPanel.cpp  pp.h
guiTools/inline/: pp_inline.h
